tests/shape/shape.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:10

Use `Partial` instead of `$Shape` - the latter is deprecated. [deprecated-utility]

   1| type T = $Shape<{a: foo}>; // ERROR
               ^^^^^^^^^^^^^^^^



Found 1 error
